--- a/public/index.html
+++ b/public/index.html
@@ -21,23 +21,25 @@
 
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <link rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
   <style>
   body,
   h1 {
-      font-family: "Raleway", sans-serif
+      font-family: "Raleway", sans-serif;
+      color: white;
   }
 
-  body,
-  html {
-      height: 100%
+  body {
+      height: 99%;
+       overflow:hidden;
   }
 
-  .bgimg {
-      background-image: url('http://i.imgur.com/8EiQooA.jpg');
-      min-height: 100%;
-      background-position: center;
-      background-size: cover;
+  img{
+      display: grid;
+      border-radius:7px;
+      margin:auto;
   }
 
   #span1 {
@@ -48,99 +50,120 @@
       letter-spacing: -0.1em;
   }
 
+#gradient{
+    overflow:hidden;
+  }
+  .w3-display-topleft{
+    margin:5px 0 0 5px;
+  }
   .wrapper {
-      padding:12%;
+      padding:10% 12% 4% 12%;
+
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-gap:1em;
-      grid-auto-rows: minmax(200px,auto)
+      grid-auto-rows: minmax(150px,210px);
+      overflow:hidden;
   }
 
-  .wrapper > div{
-      background-color:#8e9fb1;
-      padding:1em;
-      border-radius: 3px;
+  .tul{
+      background-color:rgba(236,240,241,0.28);
+      border-radius:10px;
+       overflow: auto;
+       width: 100%;
+       height: 99%;
   }
 
   .one{
-      margin:10px;
-      /*display:grid;
-      grid-template-rows: repeat(3, 1fr);
-      grid-gap:0.2em;
-      grid-auto-rows: minmax(10px,30px);*/
-      /*background-color:#b07d84;*/
-
+      margin:13px;
+      display:grid;
   }
 
-  .nested > div{
-      grid-auto-rows: minmax(10px,20px)
-      padding:1em;
-  }
+
 
   @media only screen and (max-width:1024px){
+    .wrapper {
+      padding:12%;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-gap:5em;
+      grid-auto-rows: minmax(150px,200px)
+    }
+}
 
+    @media only screen and (max-width:824px){
+      .wrapper {
+        padding:12%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap:3em;
+        grid-auto-rows: minmax(150px,200px)
+      }
+  }
+
+  @media only screen and (max-width:640px){
     .wrapper {
       margin-top: auto;
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      grid-gap:1em;
-      grid-auto-rows: minmax(130px,150px)
+      grid-template-columns:1fr;
+      grid-gap:2em;
+      grid-auto-rows: minmax(150px,200px)
     }
   }
 
   </style>
 </head>
-<body>
-    <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+<body id="gradient">
+
         <div class="w3-display-topleft w3-padding-large w3-xlarge">
             H<span>▼</span>ME<span id=span2>P</span><span id=span2>▲</span>GE
         </div>
-        <!-- <div class="w3-display-middle"> -->
+
         <div class="wrapper">
+          <div class="container1"><div class="tul">
+            <div class= "one"><a href="https://www.bankofamerica.com/"><img src="img/bankofamerica copy.jpg" alt="Bankofamerica"></a></div>
+            <div class= "one"><a href="https://www.chase.com/"><img src="img/chase copy.jpg" alt="Chase"></a></div>
+            <div class= "one"><a href="https://www.paypal.com/"><img src="img/paypal copy.jpg" alt="PayPal"></a></div>
+          </div>
+        </div>
           <div class="tul">
-            <div class= "one"><img src="img/amazon.jpg" alt="Amazon"></div>
-            <div class= "one"><img src="img/bankofamerica.jpg" alt="Bankofamerica"></div>
-            <div class= "one"><img src="img/chase.jpg" alt="Chase"></div>
-         </div>
-          <div class="tul">
-            <div class= "one"><img src="img/cnn.jpg" alt="CNN"></div>
-            <div class= "one"><img src="img/ebay.jpg" alt="Ebay"></div>
-            <div class= "one"><img src="img/etsy.jpg" alt="Etsy"></div>
+            <div class= "one"><a href="https://www.amazon.com/"><img src="img/amazon copy.jpg" alt="Amazon"></a></div>
+            <div class= "one"><a href="https://www.ebay.com/"><img src="img/ebay copy.jpg" alt="Ebay"></a></div>
+            <div class= "one"><a href="https://www.etsy.com/"><img src="img/etsy copy.jpg" alt="Etsy"></a></div>
           </div>
           <div class="tul nested ">
-             <div class= "one"><img src="img/facebook.jpg" alt="Facebook"></div>
-             <div class= "one"><img src="img/googlenews.jpg" alt="googlenews"></div>
-             <div class= "one"><img src="img/hulu.jpg" alt="Hulu"></div>
-
+             <div class= "one"><a href="https://news.google.com"><img src="img/googlenews copy.jpg" alt="googlenews"></a></div>
+             <div class= "one"><a href="https://www.cnn.com/"><img src="img/cnn copy.jpg" alt="CNN"></a></div>
+             <div class= "one"><a href="https://www.yahoo.com/news/"><img src="img/yahoonews copy.jpg" alt="Yahoo!NEWS"></a></div>
           </div>
           <div class="tul ">
-            <div class= "one"><img src="img/msn.jpg" alt="MSN"></div>
-            <div class= "one"><img src="img/netflix.jpg" alt="Netflix"></div>
-            <div class= "one"><img src="img/paypal.jpg" alt="PayPal"></div>
+            <div class= "one"><a href="https://www.hulu.com/"><img src="img/hulu copy.jpg" alt="Hulu"></a></div>
+            <div class= "one"><a href="https://www.netflix.com/"><img src="img/netflix copy.jpg" alt="Netflix"></a></div>
+            <div class= "one"><a href="https://www.youtube.com/"><img src="img/youtube copy.jpg" alt="YouTube"></a></div>
           </div>
           <div class="tul">
-            <div class= "one"><img src="img/tumblr.jpg" alt="Tumblr."></div>
-            <div class= "one"><img src="img/twitter.jpg" alt="Twitter"></div>
-            <div class= "one"><img src="img/yahoomail.jpg" alt="Yahoo!Mail"></div>
+            <div class= "one"><a href="https://www.facebook.com/"><img src="img/facebook copy.jpg" alt="Facebook"></a></div>
+            <div class= "one"><a href="https://www.twitter.com/"><img src="img/twitter copy.jpg" alt="Twitter"></a></div>
+            <div class= "one"><a href="https://www.tumblr.com/"><img src="img/tumblr copy.jpg" alt="Tumblr."></a></div>
           </div>
           <div class="tul">
-            <div class= "one"><img src="img/yahoonews.jpg" alt="Yahoo!NEWS"></div>
-            <div class= "one"><img src="img/youtube.jpg" alt="YouTube"></div>
-            <div class= "one"><img src="img/cnn.jpg" alt="cnn"></div>
+            <div class= "one"><a href="https://mail.yahoo.com/"><img src="img/yahoomail copy.jpg" alt="Yahoo!Mail"></a></div>
+            <div class= "one"><a href="https://mail.google.com"><img src="img/cnn copy.jpg" alt="gmail"></a></div>
+            <div class= "one"><a href="https://www.msn.com/en-us"><img src="img/msn copy.jpg" alt="MSN"></a></div>
           </div>
       </div>
-  </div>
-        <!-- <div class="w3-display-bottomright w3-padding-large">
-            Powered by UCLA Coding Bootcamp
-        </div> -->
-  <script>
 
+        <div class="w3-display-bottomright w3-padding-large">
+            Powered by UCLA Coding Bootcamp
+        </div>
+  <script>
       $(document).ready(function() {
       $(".wrapper").sortable();
       $(".tul").sortable({ connectWith: ".tul" });
       	});
-
   </script>
-</body>
 
+    <script src="js/gradient.js"></script>
+
+</body>
 </html>
