--- a/public/index.html
+++ b/public/index.html
@@ -120,12 +120,11 @@
         </div>
 
         <div class="wrapper">
-          <div class="container1"><div class="tul">
+          <div class="tul">
             <div class= "one"><a href="https://www.bankofamerica.com/"><img src="img/bankofamerica copy.jpg" alt="Bankofamerica"></a></div>
             <div class= "one"><a href="https://www.chase.com/"><img src="img/chase copy.jpg" alt="Chase"></a></div>
             <div class= "one"><a href="https://www.paypal.com/"><img src="img/paypal copy.jpg" alt="PayPal"></a></div>
           </div>
-        </div>
           <div class="tul">
             <div class= "one"><a href="https://www.amazon.com/"><img src="img/amazon copy.jpg" alt="Amazon"></a></div>
             <div class= "one"><a href="https://www.ebay.com/"><img src="img/ebay copy.jpg" alt="Ebay"></a></div>
@@ -163,6 +162,7 @@
       	});
   </script>
 
+    <script src="js/genre.js" type="text/javascript"></script> 
     <script src="js/gradient.js"></script>
 
 </body>
